# silent_speech

./: .gitignore  Dockerfile  Makefile  app_camera_guide.py  environment.yml  pyproject.toml  requirements.txt  translate-en-ko.py  tts.py
data_collection/: app.py  app_gradio.py  app_style.css  clean_audio.py  record_data.py  record_reading.py  style.css
libs/gradio_custom_component/: run.sh
libs/gradio_custom_component/faceguideimage/: README.md  pyproject.toml
libs/gradio_custom_component/faceguideimage/backend/gradio_faceguideimage/: __init__.py  faceguideimage.py
libs/gradio_custom_component/faceguideimage/demo/: app.py  requirements.txt  space.py
libs/gradio_custom_component/faceguideimage/flagged/: log.csv
libs/gradio_custom_component/faceguideimage/frontend/: package-lock.json  package.json
libs/gradio_custom_component/faceguideimage/frontend/shared/: Webcam.svelte
