[tool.poetry]
name = "silent-speech-mac"
version = "0.1.0"
description = ""
authors = ["nemodleo <nemod.leo@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.2.0"
notebook = "6.4.10"
torchvision = "0.17.0"
torchaudio = "2.2.0"
libsndfile1 = "^0.0.1"
absl-py = "2.1.0"
numpy = "1.24.4"
librosa = "0.10.1"
pysoundfile = "0.9.0"
jiwer = "2.2.1"
praat-textgrids = "1.4.0"
noisereduce = "3.0.2"
matplotlib = "3.8.2"
scipy = "1.12.0"
numba = "0.57.1"
silero = "0.4.1"
nltk = "^3.8.1"
sounddevice = "^0.4.6"
brainflow = "^5.12.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# poetry run python util/taskcluster.py --arch osx --target .