[tool.poetry]
name = "silent-speech-mac"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
torch = "2.2.0"
notebook = "6.4.10"
torchvision = "0.17.0"
torchaudio = "2.2.0"
libsndfile1 = "^0.0.1"
tensorboard = "^2.15.1"
datasets = "^2.14.7"
opencv-python = "^4.8.1.78"
wandb = "^0.16.0"
matplotlib = "^3.8.2"
einops = "^0.7.0"
omegaconf = "^2.3.0"
accelerate = "^0.28.0"
transformers = { version = "^4.39.3", extras = ["accelerate"] }
absl-py = "2.1.0"
numpy = "1.22.0"
librosa = "0.10.0"
pysoundfile = "0.9.0"
jiwer = "2.2.1"
praat-textgrids = "1.4.0"
noisereduce = "3.0.2"
numba = "0.57.1"
nltk = "^3.8.1"
sounddevice = "^0.4.6"
brainflow = "^5.12.1"
gradio = "^4.26.0"
tts = "0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"